media query adjust from column to row

--- a/index.html
+++ b/index.html
@@ -7,22 +7,29 @@
     </head>
 
     <body>
-        <main>
-            <nav>
-                <figure class="logo_container">
-                    <img class="logo" src="images/Bkcp_triangle.jpg" alt="bkcp logo">
-                </figure>
-            </nav>
+        <nav>
+            <figure class="logo_container">
+                <img class="logo" src="images/Bkcp_triangle.jpg" alt="bkcp logo">
+            </figure>
+        </nav>
+        <main class="main">
             <figure class="image_container">
                 <img class="sketch" src="images/sketch01.png" alt="abstract sketch">
                 <figcaption>
-
                     <audio controls src="audio/Empowerment.mp3"></audio>
                     <p>BKCP</p>
                 </figcaption>
             </figure>
-            <footer>brockcooper.com</footer>
+            <figure class="image_container">
+                <img class="sketch" src="images/sketch01.png" alt="abstract sketch">
+                <figcaption>
+                    <audio controls src="audio/Empowerment.mp3"></audio>
+                    <p>BKCP</p>
+                </figcaption>
+            </figure>
+
         </main>
+        <footer>brockcooper.com</footer>
     </body>
 
 
