--- a/index.html
+++ b/index.html
@@ -27,6 +27,38 @@
                     <p>BKCP</p>
                 </figcaption>
             </figure>
+            </figure>
+            <figure class="image_container">
+                <img class="sketch" src="images/sketch01.png" alt="abstract sketch">
+                <figcaption>
+                    <audio controls src="audio/Empowerment.mp3"></audio>
+                    <p>BKCP</p>
+                </figcaption>
+            </figure>
+            </figure>
+            <figure class="image_container">
+                <img class="sketch" src="images/sketch01.png" alt="abstract sketch">
+                <figcaption>
+                    <audio controls src="audio/Empowerment.mp3"></audio>
+                    <p>BKCP</p>
+                </figcaption>
+            </figure>
+            </figure>
+            <figure class="image_container">
+                <img class="sketch" src="images/sketch01.png" alt="abstract sketch">
+                <figcaption>
+                    <audio controls src="audio/Empowerment.mp3"></audio>
+                    <p>BKCP</p>
+                </figcaption>
+            </figure>
+            </figure>
+            <figure class="image_container">
+                <img class="sketch" src="images/sketch01.png" alt="abstract sketch">
+                <figcaption>
+                    <audio controls src="audio/Empowerment.mp3"></audio>
+                    <p>BKCP</p>
+                </figcaption>
+            </figure>
 
         </main>
         <footer>brockcooper.com</footer>
